@@ -80,7 +80,6 @@ Graphics
     Poster Exhibition
 
 Keynotes
-    Keynote address
     Keynote Address
     KEYNOTE ADDRESS
     Keynote Addresses
@@ -105,8 +104,6 @@ Macros
     Macro Packages
     Macro Writing
     Macros & Other Tools
-    Macros &amp; Other Tools
-    TeX tensions
     TeXtensions
 
 Multilingual Document Processing
@@ -133,14 +130,12 @@ Publishing
     Publishing and Design
     Publishing and TeX
     Q & A
-    Q &amp; A
 
 Queries
     Problems
     Query
     Questions
     Questions & Answers
-    Questions &amp; Answers
 
 Resources
     TeX Notes
@@ -157,7 +152,6 @@ Software & Tools
     Front Ends
     Hardware/Systems
     Software
-    Software & Tool
     TeX Live CD-ROM
     TeX Systems
     TeX Tools
@@ -201,16 +195,13 @@ Leyla Akhmadeeva
     Akhmadeeva
 
 David Allen
-    Abstracts (Allen
     Allen
 
 Jonathan Kew
     Kew
 
 Johannes K&uuml;ster
-    Johannes Kuster
     K&uuml;ster
-    Kuster
 
 Kaveh Bazargan
     Kaveh Bazargan,&nbsp;Moderator
@@ -228,7 +219,6 @@ Nelson Beebe
     Nelson H. F. Beebe
 
 Barbara Beeton
-    B. Beeton
     Beeton
 
 Doris Behrendt
@@ -238,7 +228,6 @@ Alexander Berdnikov
     Alexander S. Berdnikov
     A. Berdnikov
     A.S. Berdnikov
-    A. A. Berdnikov
 
 Karl Berry
     Berry
@@ -264,9 +253,6 @@ W&#322;odzimierz Bzyl
 A.G.W. Cameron
     A. G. W. Cameron
 
-Lance Carnes
-    L. Carnes
-
 William Cheswick
     Bill Cheswick
     Cheswick
@@ -280,11 +266,7 @@ Adrian Clark
 Jennifer Claudio
     Claudio
 
-Michael Cohen
-    Michel Cohen
-
 Sandro Coriasco
-    Coriasco
     Coriasco et al.
     S. Coriasco
 
@@ -349,7 +331,6 @@ Thomas Feuerstack
     Feuerstack
 
 Jonathan Fine
-    Abstracts (Fine
     Fine
 
 Katalin Fried
@@ -389,7 +370,6 @@ James Hafner
     
 Hans Hagen
     Hagen
-    Abstracts (Hagen
 
 Shizuya Hakuta
     Hakuta
@@ -496,7 +476,6 @@ Richard Kinch
     Richard J. Kinch
 
 Donald Knuth
-    D. Knuth
     Donald E. Knuth
     Don Knuth
 
@@ -552,7 +531,6 @@ M.L. Luvisetto
 
 Pierre MacKay
     Pierre A. MacKay
-    P. MacKay
 
 Yoshifumi Maeda
     Maeda
@@ -598,7 +576,6 @@ Norman Naugle
     Norman W. Naugle
 
 Paulo Ney de Souza
-    Ney de Souza
     de Souza
     
 Monte Nichols
@@ -624,7 +601,6 @@ Steve Peter
     Peter
 
 Mitch Pfeffer
-    Pfeffer, Mitch
     M. Pfeffer
 
 Karel P&iacute;&#x0161;ka
@@ -750,7 +726,6 @@ Michael Spivak
 
 Jim Sterken
     J.J. Sterken
-    J.Sterken
 
 Ari Stern
     Stern
@@ -762,9 +737,6 @@ Donald Story
 
 P&eacute;ter Szab&oacute;
     Szab&oacute;
-
-Yumi Takata
-    Takata
 
 Philip Taylor
     Phil Taylor
@@ -821,7 +793,6 @@ Ji&#x0159;&iacute; Vesel&yacute;
 
 Boris Veytsman
     Veytsman
-    Veytsman)
 
 Ulrik Vieth
     Vieth
@@ -876,15 +847,3 @@ Ignacio Zabala
 
 Sergei V. Znamenskii
     S. V. Znamenskii
-
-# 
-#some title unifications
-
-Editorial Comments
-    Editorial comments
-
-Editorial Information
-    Editorial information
-
-From the President
-    From the president
